# PECANN-CAPU

./: .gitignore  README.md  pyproject.toml
1_uns_heat_composite_aggg/: bash.sh  config.py  job.1617773.err  run.slurm
1_uns_heat_composite_aggg/core/: __init__.py  trainer.py
1_uns_heat_composite_aggg/data/: __init__.py  collocation.py
1_uns_heat_composite_aggg/diagnostics/: diagnostics.py
1_uns_heat_composite_aggg/models/: __init__.py  fc_net.py
1_uns_heat_composite_aggg/physics/: __init__.py  residuals.py
1_uns_heat_composite_aggg/utils/: __init__.py  io.py
1_uns_heat_composite_aggg/viz/: __init__.py  viz.py
3_psn_b50_fourier_dom128/: README.md  config.py  demon_local_1trial.ipynb  main.py
3_psn_b50_fourier_dom128/core/: __init__.py  trainer.py
3_psn_b50_fourier_dom128/diagnostics/: diagnostics.py
3_psn_b50_fourier_dom128/logs/: psn_freq_b50_batch_128_fourier_nn2_100_1.pt  psn_freq_b50_batch_128_fourier_nn2_100_2.pt  psn_freq_b50_batch_128_fourier_nn2_100_3.pt  psn_freq_b50_batch_128_fourier_nn2_100_4.pt  psn_freq_b50_batch_128_fourier_nn2_100_5.pt
3_psn_b50_fourier_dom128/models/: fc_net.py
3_psn_b50_fourier_dom128/physics/: __init__.py  residuals.py
3_psn_b50_fourier_dom128/utils/: io.py  layers.py
3_psn_b50_fourier_dom128/viz/: viz.py  (+1 more)
4_helm_source_l5_fourier/: config.py
5_reverse_advection_T8_mesh257/: bash.sh  config.py  job.1637737.err  run.slurm
forward/: README.md
inverse/: README.md
pecann_capu/: pecann.py
psn_b50_fourier_dom128/: config.py  main.ipynb  pecann.py  psn_freq_b50_batch_128_fourier_nn2_100_5.pt  run.slurm
(+31 files in other folders)
