[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pecann-capu"
version = "0.1.0"
description = "PECANN-CAPU: Physics and Equality-Constrained Artificial Neural Network with Conditionally Adaptive Penalty Update"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Qifeng Hu"},
]
dependencies = [
    "torch>=1.10",
]

[project.urls]
Homepage = "https://github.com/QifengHu/PECANN-CAPU"
Repository = "https://github.com/QifengHu/PECANN-CAPU"

[tool.setuptools.packages.find]
include = ["pecann_capu*"]
